--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "checkers",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://buiankin.github.io/checkers",
   "dependencies": {
     "@sberdevices/assistant-client": "^2.11.6",
     "@sberdevices/plasma-core": "^2.0.0-rc.7",
@@ -15,6 +16,7 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -24,6 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
