--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "private": true,
   "homepage": "http://buiankin.github.io/checkers",
   "dependencies": {
-    "@sberdevices/assistant-client": "^2.12.0",
+    "@sberdevices/assistant-client": "^2.13.0",
     "@sberdevices/plasma-core": "^2.0.0-rc.7",
-    "@sberdevices/plasma-icons": "^1.5.0",
+    "@sberdevices/plasma-icons": "^1.0.0-rc.6",
     "@sberdevices/plasma-tokens": "^1.1.0",
+    "@sberdevices/plasma-ui": "^0.98.0-rc.0",
     "@sberdevices/ui": "^1.0.0-rc.82",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.11",
-    "@types/react": "^17.0.4",
+    "@types/node": "^12.20.12",
+    "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
     "@types/styled-components": "^5.1.9",
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.2.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
